--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_USERNAME=root
 DB_PASSWORD=pass
-DB_DATABASE=knpjobPortal
+DB_DATABASE=knp
 DB_HOST=localhost
 DB_DIALECT=mysql
 NODE_ENV=development
