--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ijura-api",
+  "name": "knp-portal",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -7,19 +7,22 @@
     "start:dev": "nodemon ./app.js | npx bunyan",
     "lint": "npx eslint ."
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint"
-    }
-  },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "bunyan": "^1.8.12",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.0.0",
     "express": "~4.16.0",
     "helmet": "^3.18.0",
     "http-errors": "~1.6.2",
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "pino": "^6.11.3",
     "pug": "2.0.0-beta11",
     "sequelize": "^5.8.5",
     "validate.js": "^0.12.0"
