--- a/dev.env
+++ b/dev.env
@@ -1,6 +1,9 @@
-NODE_ENV=development
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
-DB_DATABASE=viewtube
+DB_USERNAME=root
+DB_PASSWORD=pass
+DB_DATABASE=knp
 DB_HOST=localhost
-DB_DIALECT=postgres
+DB_DIALECT=mysql
+NODE_ENV=development
+DB_PORT=3306
+PORT:3001
+JWT_SECRET=secret
